[gd_scene load_steps=43 format=3 uid="uid://ktgh7pa1r2tp"]

[ext_resource type="Script" path="res://geral/monster/inimigoarmado.gd" id="1_ego8v"]
[ext_resource type="Texture2D" uid="uid://c06vjcxene2jp" path="res://geral/morte.png" id="2_yc5yx"]
[ext_resource type="Texture2D" uid="uid://oo8jw0ebwcyc" path="res://geral/Mushroom without VFX/Mushroom-Hit.png" id="3_g3yg3"]
[ext_resource type="Texture2D" uid="uid://7eyibknpv2fa" path="res://geral/policial e mafioso.png" id="5_toqje"]
[ext_resource type="PackedScene" uid="uid://bc6p88bic5l5c" path="res://geral/hitbox/hit_box.tscn" id="5_trbm3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q8gub"]
radius = 6.08276

[sub_resource type="AtlasTexture" id="AtlasTexture_5k4ly"]
atlas = ExtResource("2_yc5yx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bki5"]
atlas = ExtResource("2_yc5yx")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c0hy"]
atlas = ExtResource("2_yc5yx")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi7d7"]
atlas = ExtResource("2_yc5yx")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n145i"]
atlas = ExtResource("2_yc5yx")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bie53"]
atlas = ExtResource("2_yc5yx")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyrya"]
atlas = ExtResource("2_yc5yx")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4n14"]
atlas = ExtResource("2_yc5yx")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3adcb"]
atlas = ExtResource("2_yc5yx")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqym8"]
atlas = ExtResource("2_yc5yx")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxdh2"]
atlas = ExtResource("2_yc5yx")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_isxdo"]
atlas = ExtResource("2_yc5yx")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtwpq"]
atlas = ExtResource("2_yc5yx")
region = Rect2(832, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7nt8"]
atlas = ExtResource("2_yc5yx")
region = Rect2(896, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf4qd"]
atlas = ExtResource("3_g3yg3")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kp6a"]
atlas = ExtResource("3_g3yg3")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rmpd"]
atlas = ExtResource("3_g3yg3")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bo6v"]
atlas = ExtResource("3_g3yg3")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogrxc"]
atlas = ExtResource("3_g3yg3")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c137c"]
atlas = ExtResource("5_toqje")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw2i1"]
atlas = ExtResource("5_toqje")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmoyn"]
atlas = ExtResource("5_toqje")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr06c"]
atlas = ExtResource("5_toqje")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3o36"]
atlas = ExtResource("5_toqje")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dh7d"]
atlas = ExtResource("5_toqje")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56wnd"]
atlas = ExtResource("5_toqje")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ag5j"]
atlas = ExtResource("5_toqje")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cu7i"]
atlas = ExtResource("5_toqje")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3swu7"]
atlas = ExtResource("5_toqje")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cdy5"]
atlas = ExtResource("5_toqje")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpcug"]
atlas = ExtResource("5_toqje")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33dqm"]
atlas = ExtResource("5_toqje")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_m03vw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k4ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bki5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c0hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi7d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n145i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bie53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyrya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4n14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3adcb")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_qqym8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqym8")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxdh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isxdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtwpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nt8")
}],
"loop": false,
"name": &"attacking",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf4qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kp6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rmpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bo6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogrxc")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c137c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw2i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmoyn")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr06c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3o36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dh7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56wnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ag5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cu7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3swu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cdy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33dqm")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6pmf"]
radius = 5.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a45sl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xghpc"]
radius = 286.531

[node name="Mafia" type="CharacterBody2D" groups=["inimigos"]]
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.0
platform_floor_layers = 4294967279
script = ExtResource("1_ego8v")

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_q8gub")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_m03vw")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.845078

[node name="HitBox" parent="." instance=ExtResource("5_trbm3")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_r6pmf")

[node name="prox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="proximo" type="CollisionShape2D" parent="prox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_a45sl")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 15.0
avoidance_layers = 21
avoidance_mask = 21
avoidance_priority = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xghpc")
debug_color = Color(0.886275, 0.298039, 0.380392, 0.419608)

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.093

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-203, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="HitBox" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="Damaged" from="HitBox" to="." method="_on_hit_box_damaged"]
[connection signal="body_entered" from="prox" to="." method="_on_prox_body_entered"]
[connection signal="body_exited" from="prox" to="." method="_on_prox_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
